# ogz-source-master-LITE

./: .gitignore  ANALISIS_COMPLETO_ZQUEST_SISTEMA.md  ANALISIS_GP_GAME_USOS_CRITICOS.md  ANALISIS_MEMORIA_ZEFFECTMANAGER.md  ANALISIS_SISTEMA_RENDERIZADO.md  ANALISIS_ZCHARACTER_GLITCHES_BUGS.md  ANALISIS_ZWORLD_ZWORLDITEM.md  CASOS_OPTIMIZACION_CLASES_HELPER_ENCONTRADOS.md  CASOS_OPTIMIZACION_ZGETGAME_ENCONTRADOS.md  CASOS_PENDIENTES_GP_GAME.md  CORRECCIONES_APLICADAS.md  ERRORES_MEMORIA_CONSTRUCTORES_DESTRUCTORES.md  ERRORES_ZGETEFFECTMANAGER_CORREGIDOS.md  EVALUACION_CPU_GPU_SKINNING_REALSPACE2.md  EVALUACION_NORMALMAPS_REALSPACE2.md  GUIA_OPTIMIZACION_ZGETGAME.md  GUIA_PRUEBAS_KNOCKBACK.md  MEJORAS_MEMORIA_ZEFFECTMANAGER_APLICADAS.md  MEJORAS_SKINNING_IMPLEMENTADAS.md  MEJORAS_SKINNING_REALSPACE2.md  ONKNOCKBACK_VALIDACION.md  OPTIMIZACION_HUMO_CARTUCHOS.md  OPTIMIZACION_ZGETGAME_APLICADA.md  PROPUESTA_REFACTORIZACION_RENDERIZADO.md  VALIDACION_ISDEAD_PROBLEMAS.md  VALIDACION_ZCOMBATINTERFACE.md  VOICECHAT_MEJORAS_ANALISIS.md  ZGETGAME_VS_GP_GAME_ANALISIS.md  build-win32-VS2026.bat
src/: CMakeLists.txt
src/CSCommon/Include/: Config.h  MBaseGameType.h  MErrorTable.h  MQuestNPC.h  MSharedCommandTable.h
src/CSCommon/Source/: MBaseGameType.cpp  MMatchItem.cpp  MQuestNPC.cpp  MSharedCommandTable.cpp
src/Gunz/: ANALISIS_COSTO_ZACTOR.md  ANALISIS_FSM_MEJORAS.md  ANALISIS_IA_Y_PROBLEMAS_VELOCITY.md  ANALISIS_NAVIGATION_MESH.md  ANALISIS_SHOP_LOGIC_UI.md  ANALISIS_SINGLETONS_Y_ACCESORES.md  CAMBIOS_ZACTOR_SUMMER_SOURCE.md  CASOS_ADICIONALES_PENDIENTES.md  CMakeLists.txt  CODIGO_DUPLICADO_Y_REFACTORIZACION.md  CODIGO_DUPLICADO_ZACTOR.md  CODIGO_XML_AGREGAR_SHOP.md  COMPARACION_IA_SUMMER_SOURCE.md  CORRECCIONES_ACCESORES_APLICADAS.md  CORRECCIONES_ADICIONALES_APLICADAS.md  CORRECCIONES_ADICIONALES_PENDIENTES.md  CORRECCIONES_VELOCITY_Y_IA.md  D3DPTR_ADDITIONAL_OPPORTUNITIES.md  D3DPTR_COMPREHENSIVE_ANALYSIS.md  D3DPTR_CONVERSIONS_APPLIED.md  EJEMPLO_MODULO_ESTADO.md  ERRORES_LOGICA_SHOP.md  EXPLICACION_ZSTENCILLIGHT.md  FSM_MEJORAS_IMPLEMENTACION_COMPLETA.md  FSM_MEJORAS_RESUMEN_FINAL.md  FSM_PATHFINDING_ANALISIS_Y_MEJORAS.md  FSM_PATHFINDING_VALIDACION_VIABILIDAD.md  GUIA_CREAR_SKILLS_Y_ESTADOS.md  ILUMINACION_NPC_ANALISIS_VISUAL.md  ILUMINACION_NPC_OPTIMIZACION_APLICADA.md  ILUMINACION_NPC_VERIFICACION.md  MEJORAS_ADICIONALES_ZSTENCILLIGHT.md  MEJORAS_ESCALERAS_RELIEVE.md  MEJORAS_ESCALERAS_RELIEVE_APLICADAS.md  MEJORAS_FUNCIONALES_SHOP.md  MEJORAS_VIABLES_IMPLEMENTACION.md  NPC_CREATION_OPTIMIZATION_RECOMMENDATIONS.md  NPC_HP_BAR_IMPLEMENTATION.md  NPC_RUNTIME_OPTIMIZATION_RECOMMENDATIONS.md  NPC_RUNTIME_PERFORMANCE_ANALYSIS.md  (+107 more)
src/Gunz/XML/: worlditem.xml
src/Locator/: CMakeLists.txt
src/MDatabase/Source/: MDatabase.cpp
src/MatchServer/: CMakeLists.txt  IDatabase.h  MAsyncDBJob_GetLoginInfo.cpp  MAsyncProxy.cpp  MAsyncProxy.h  MMatchClan.cpp  MMatchClan.h  MMatchConfig.cpp  MMatchConfig.h  MMatchRule.h  MMatchRuleDuel.cpp  MMatchRuleDuel.h  MMatchRuleQuest.cpp  MMatchRuleWeaponDrop.cpp  MMatchRuleWeaponDrop.h  MMatchServer.cpp  MMatchServer.h  MMatchServer_Agent.cpp  MMatchServer_Char.cpp  MMatchServer_Item.cpp  MMatchServer_Login.cpp  MMatchServer_OnCommand.cpp  MMatchStage.cpp  MMatchStage.h  MMatchWorldItem.cpp  MMatchWorldItem.h  MSSQLDatabase.cpp  MSSQLDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h
src/RealSpace2/: ALL_PARTICLE_EFFECTS.xml  BUFFER_MANAGER_AUDIT.md  BUFFER_MANAGER_CLEANUP_OPTIMIZATION.md  BUFFER_MANAGER_FIXES_APPLIED.md  BUFFER_MANAGER_IMPLEMENTATION.md  BUFFER_MANAGER_IMPROVEMENTS.md  BUFFER_MANAGER_PENDING.md  BUFFER_MANAGER_PERFORMANCE.md  BUFFER_MANAGER_PHASE2_COMPLETE.md  BUFFER_MANAGER_REUTILIZACION.md  BUFFER_MANAGER_USAGE_AUDIT.md  BUFFER_MANAGER_USAGE_FINAL.md  BUFFER_MANAGER_VIABILITY.md  BuildHLSLShaders.bat  CHEST_DEBUG_SOLUTION.md  CHEST_DROP_TABLE_ISSUE.md  CMakeLists.txt  COMPLETE_SPECULAR_RANGE_ANALYSIS.md  CPP14_FEATURES_EVALUATION.md  FOG_ANALYSIS.md  IMPROVEMENTS_EVALUATION.md  LIGHT_MEMORY_FIX.md  MESHMANAGER_ANALYSIS.md  MESHMANAGER_VERIFICATION.md  MIGRATION_NEW_TO_UNIQUE_PTR.md  PARTICLESYSTEM_ANALYSIS.md  PARTICLESYSTEM_AUTO_COLLISION_EXAMPLE.md  PARTICLESYSTEM_EMITTERS_COLLISIONS_PROPOSAL.md  PARTICLE_EFFECTS_EXAMPLES.xml  PARTICLE_EFFECTS_GUIDE.md  PARTICLE_TEXTURE_PROMPTS.md  QUEST_ITEM_DELIVERY_SYSTEM.md  RMESH_ATOMIC_ANALYSIS.md  RMESH_FILES_CPP14_ANALYSIS.md  RMTRL_ANALYSIS.md  RMTRL_ATOMIC_IMPLEMENTATION.md  RMTRL_RMESH_ATOMIC_ANALYSIS.md  RMTRL_UNIQUE_PTR_VIABILITY.md  SKIN_SHADER_ANALYSIS.md  SKIN_SHADER_FACTORS.md  (+7 more)
src/RealSpace2/Include/: MeshManager.h  RAStar.h  RBspObject.h  RBspObjectDrawD3D9.h  RBufferManager.h  RFont.h  RMesh.h  RMeshUtil.h  RMtrl.h  RNavigationMesh.h  RParticleCollision.h  RParticleEmitter.h  RParticleSystem.h  RealSpace2.h  skin.h
src/RealSpace2/MaterialTest/: CMakeLists.txt  MATERIAL_SHADER_REQUIREMENTS.md  MaterialTestApp.cpp  MaterialTestApp.h  README.md  main.cpp  stdafx.h  targetver.h
src/RealSpace2/MaterialTest/Shaders/: MaterialTest.hlsl
src/RealSpace2/Source/: ForwardBSP.hlsl  MeshManager.cpp  RBspObject.cpp  RBspObjectDrawD3D9.cpp  RBufferManager.cpp  RFont.cpp  RMaterialList.cpp  RMesh.cpp  RMeshMgr.cpp  RMeshNode.cpp  RMeshUtil.cpp  RMesh_Frame.cpp  RMesh_Load.cpp  RMesh_Render.cpp  RMtrl.cpp  RNavigationMesh.cpp  RNavigationNode.cpp  RParticleCollision.cpp  RParticleEmitter.cpp  RParticleSystem.cpp  RShaderMgr.cpp  RealSpace2.cpp  skin.hlsl  skin_improved.hlsl
src/cmake/: cotire.cmake  ucm.cmake
src/tools/WorldEdit/: CMakeLists.txt  InfoDialog.cpp  MainFrm.cpp  ObjectDialog.cpp  ObjectSelectDialog.cpp  Resource.h  StdAfx.h  WorldEdit.cpp  WorldEditDoc.cpp  WorldEditDoc.h  WorldEditView.cpp  WorldEditView.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  main.cpp
